Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sun Aug 12 2012 Thunor <thunorsif@hotmail.com>
- Fixed a bug that caused applications that included a menu to fail to
  close via the window manager (title bar) and in fact closewindow too.
- Fixed a bug that caused a parser error when using multiple launched
  windows: the envvar that contained the program was being overwritten.

* Thu Aug 9 2012 Thunor <thunorsif@hotmail.com>
- Refactored the menubar widget and updated it in the parser so that it
  now supports the recently added hide and show action functions.

* Wed Aug 8 2012 Thunor <thunorsif@hotmail.com>
- Refactored the frame widget and added support for <input>,
  <input file>, enable, disable, show, hide, refresh, save and clear.
- Added support for show and hide to all widgets except those that
  require refactoring and updating in the parser to support directives.
- Refactored the hbox widget and updated it in the parser so that it
  now supports the recently added hide and show action functions.
- Refactored the vbox widget and updated it in the parser so that it
  now supports the recently added hide and show action functions.

* Tue Aug 7 2012 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/press_and_release_events.
- Added show and hide action functions.
- Dropped MAXWIDGETS back to 256 since it's per container, not project.

* Mon Aug 6 2012 Thunor <thunorsif@hotmail.com>
- Added KEY_VAL, KEY_SYM (both are listed in gdk/gdkkeysyms.h), KEY_UNI
  (the Unicode character if applicable), KEY_MOD (GdkModifierType) and
  KEY_RAW (hardware) envvars on key_press_event and key_release_event.
- Added PTR_X and PTR_Y (widget relative), PTR_MOD (GdkModifierType),
  PTR_BTN (equivalent to the existing BUTTON), PTR_X_ROOT and PTR_Y_ROOT
  (screen relative) envvars on button_press_event/button_release_event.
- Fixed examples/miscellaneous/signals - DIALOG changed to DIALOG_MAIN.
